# text-to-sql-agent-master

./: AI Master Project 최종 발표_심재규_10370 - 복사본.pptx  AI_Master_Project_최종_보고서_10370_심재규.docx  Chinook_Column_Config.json  README.md  app.py  block-diagram.md  cache.py  db_proxy.py  exec_utils.py  guardrails.py  main.py  pyproject.toml  schema_tools.py  server.py  snowflake_adventure_works_table_schema  snowflake_credential.json  snowflake_global_weather_climate_data_for_bi_table_schema  test_Chinook.ipynb  test_Chinook_backup.ipynb  test_Chinook_table_schema_insert.ipynb  test_Chinook_update.ipynb  test_spider2.0.ipynb  text2sql_agent.py
.continue/mcpServers/: mac-sql.yaml
config/: security.yaml
sql_memory_chroma_db/: chroma.sqlite3
sql_memory_chroma_db_F2/: chroma.sqlite3
sql_memory_chroma_db_F3/: chroma.sqlite3
sql_memory_chroma_db_F4/: chroma.sqlite3
sql_memory_chroma_db_F5/: chroma.sqlite3
sql_memory_chroma_db_F6/: chroma.sqlite3
